sample 2 page complete

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".MainActivity">
+    <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello User,
+        What task would you like help with today?"
+        android:lines="2"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
