--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -26,7 +26,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="20dp"
-        android:background="#FAF9F9"
+        android:background="#FFFFFF"
         android:padding="15dp"
         android:layout_marginRight="20dp"
         android:orientation="vertical">
