--- a/app/src/main/res/layout/comment_list.xml
+++ b/app/src/main/res/layout/comment_list.xml
@@ -2,12 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="20dp"
     >
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/timeTV"
-        android:text="date"/>
+        android:id="@+id/Name"
+        android:text="Name"/>
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/rateTV"
+        android:text="Great work"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
