--- a/app/src/main/res/layout/list.xml
+++ b/app/src/main/res/layout/list.xml
@@ -35,13 +35,13 @@
                     android:textSize="18sp"
                     android:textStyle="bold"
                     android:textColor="#000"
-                    android:text="@string/fullname"
+                    android:text="@string/full_name"
                     />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
                     android:layout_height="wrap_content"
-                    android:text="@string/fullname_txt"
+                    android:text="@string/full_name"
                     android:id="@+id/name_volley"
                     />
             </LinearLayout>
@@ -51,16 +51,16 @@
                 android:layout_below="@+id/LL1"
                 android:id="@+id/LL2"
                 android:orientation="horizontal">
+
                 <TextView
+                    android:id="@+id/product_price"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:id="@+id/product_price"
                     android:text="@string/contact"
-                    android:textSize="18sp"
                     android:textColor="#000"
-                    android:textStyle="bold"
-                    />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
                 <TextView
                     android:layout_width="0dp"
                     android:layout_weight="1"
