--- a/app/src/main/res/layout/activity_sample2.xml
+++ b/app/src/main/res/layout/activity_sample2.xml
@@ -171,15 +171,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="32dp"
-        android:padding="20dp"
-        android:orientation="vertical"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="8dp"
         android:layout_marginEnd="32dp"
+        android:orientation="vertical"
         >
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="Comments :"
+            android:id="@+id/comments"
             android:textSize="20sp"
             />
         <androidx.recyclerview.widget.RecyclerView
