--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -29,7 +29,7 @@
             android:layout_gravity="center_horizontal"
             android:text="@string/text_logo"
             android:textAlignment="center"
-            android:textColor="#fff"
+            android:textColor="#FFF"
             android:textSize="30sp" />
 
     </RelativeLayout>
@@ -50,7 +50,7 @@
             android:autofillHints="@string/text_username"
             android:background="@drawable/custom_input"
             android:drawableStart="@drawable/ic_username"
-            android:drawablePadding="12dp"
+            android:drawablePadding="10dp"
             android:inputType="text"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
