--- a/app/src/main/res/layout/activity_sample.xml
+++ b/app/src/main/res/layout/activity_sample.xml
@@ -12,8 +12,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/swipe">
+
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
+        tools:listitem="@layout/list"
         android:layout_height="match_parent"
         android:id="@+id/sample_recycler"
         />
