--- a/app/src/main/res/layout/row_home.xml
+++ b/app/src/main/res/layout/row_home.xml
@@ -16,7 +16,7 @@
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/account"
+            android:src="@drawable/electriacian"
             android:layout_marginTop="10dp"
             android:id="@+id/image"
             android:layout_gravity="center_horizontal"
@@ -30,7 +30,7 @@
             android:textSize="14sp"
             android:id="@+id/imageDescription"
             android:layout_marginTop="10dp"
-            android:text="Customer Add"
+            android:text="Electrician"
             android:layout_marginBottom="10dp"
             />
 
