--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,11 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/mll"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:id="@+id/mll"
     android:background="#0E2130"
+    android:orientation="vertical"
     tools:context=".LoginActivity">
 
     <RelativeLayout
@@ -50,47 +50,46 @@
             android:autofillHints="@string/text_username"
             android:background="@drawable/custom_input"
             android:drawableStart="@drawable/ic_username"
+            android:drawableLeft="@drawable/ic_username"
             android:drawablePadding="10dp"
+            android:hint="@string/text_username"
             android:inputType="text"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
-            android:textSize="16sp"
-            android:hint="@string/text_username"
-            android:drawableLeft="@drawable/ic_username"/>
+            android:textSize="16sp" />
 
         <EditText
             android:id="@+id/loginPassword"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_gravity="center"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="2dp"
-            android:layout_gravity="center"
             android:autofillHints="@string/text_password"
             android:background="@drawable/custom_input"
             android:drawableStart="@drawable/ic_password"
+            android:drawableLeft="@drawable/ic_password"
             android:drawablePadding="12dp"
+            android:hint="@string/text_password"
             android:inputType="textPassword"
             android:paddingStart="12dp"
             android:paddingEnd="12dp"
             android:textColor="@color/black"
             android:textColorHint="@color/black"
-            android:textSize="16sp"
-            android:hint="@string/text_password"
-            android:drawableLeft="@drawable/ic_password" />
-
+            android:textSize="16sp" />
 
 
         <Button
             android:id="@+id/BtnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="20dp"
             android:backgroundTint="#FFC107"
             android:text="@string/button_text_login"
             android:textAlignment="gravity"
             android:textColor="@color/white"
-            android:layout_marginTop="20dp"
             android:textSize="18sp" />
 
         <LinearLayout
@@ -98,23 +97,25 @@
             android:layout_height="fill_parent"
             android:layout_marginTop="20dp"
             android:orientation="horizontal">
+
             <TextView
                 android:id="@+id/forgot_pass"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="15dp"
                 android:layout_weight="1"
+                android:gravity="left"
                 android:text="@string/text_forgot"
                 android:textColor="#fff"
-                android:gravity="left"
                 android:textSize="14sp" />
+
             <TextView
                 android:id="@+id/create_acc"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="right"
-                android:layout_weight="1"
                 android:layout_marginTop="15dp"
+                android:layout_weight="1"
+                android:gravity="right"
                 android:text="@string/button_sign_up"
                 android:textColor="@android:color/white"
                 android:textSize="14sp" />
