--- a/app/src/main/res/layout/row_home.xml
+++ b/app/src/main/res/layout/row_home.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/homeCardV"
     android:layout_width="150dp"
     android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_gravity="center_horizontal"
     android:layout_margin="15dp"
-    app:cardCornerRadius="10dp"
-    android:id="@+id/homeCardV"
-    android:layout_gravity="center_horizontal">
+    app:cardCornerRadius="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -14,25 +14,23 @@
         android:orientation="vertical">
 
         <ImageView
+            android:id="@+id/image"
             android:layout_width="60dp"
             android:layout_height="60dp"
-            android:src="@drawable/electriacian"
-            android:layout_marginTop="10dp"
-            android:id="@+id/image"
             android:layout_gravity="center_horizontal"
-            />
+            android:layout_marginTop="10dp"
+            android:src="@drawable/electriacian" />
 
         <TextView
+            android:id="@+id/imageDescription"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:textColor="#000000"
-            android:textSize="14sp"
-            android:id="@+id/imageDescription"
             android:layout_marginTop="10dp"
-            android:text="Electrician"
             android:layout_marginBottom="10dp"
-            />
+            android:text="Electrician"
+            android:textColor="#000000"
+            android:textSize="14sp" />
 
     </LinearLayout>
 
